# Transaction-Tracking

./: .gitignore  Dockerfile  README.md  main.py  pyproject.toml  start.sh
.github/workflows/: deploy-space.yml
backend/: db.py  main.py
backend/routers/: analytics.py  auth.py  categories.py  settings.py  transactions.py
backend/utils/: jwt_handler.py
frontend/: add-transaction.html  dashboard.html  history.html  index.html  login.html  settings.html  signup.html  statistics.html
frontend/assets/css/: style.css
frontend/assets/js/: add.js  api.js  auth.js  config.js  dashboard.js  history.js  settings.js  stats.js
